--- a/index.html
+++ b/index.html
@@ -35,9 +35,7 @@
                 <div class="col-md-8 col-md-offset-2">
                     <h1>Welcome!</h1>
                     <hr>
-                    <p>The startup interface provides the basic instructions to your participants, and also collect input from the participant/experimenter the participant ID so that you can generate the correct data log for a particular experiment session.</p>
-
-                    <p>This is a template. Please write your participant number ID given by your experimenter. Participant IDs should only consist of alphanumeric characters.</p>
+                    <p>Please enter your Participant ID and press 'Next'.</p>
                     <form class="form-inline" id="pid-form">
                         <div class="form-group">
                             <label for="pid">Participant ID</label>
