--- a/instructions.html
+++ b/instructions.html
@@ -30,19 +30,45 @@
             </div>
         </nav>
 
-        <div class="container">
+        <div class="container acp-container">
             <div class="row">
                 <div class="col-md-8 col-md-offset-2">
                     <h1>Instructions</h1>
                     <hr>
-                    <p>Dear participant <span class="js-pid pid"></span>, please read the instructions before the experiment.
+                    <p>Dear participant <span class="js-pid pid"></span>,
+                        thank you for participating!
+                        Please read the instructions before the experiment.
 
-                    <p>There should always be an instruction before doing the actual evaluation of the interface.<p>
-                    <p>Enter your instructions to your participant here. Diagrams and screenshots will be very helpful!</p>
+                    <h2> The experiment </h2>
+                    <P>In this experiment, we are interested in finding out how AutoComPaste and Ctrl+C, Ctrl+V compare in terms of performance. Hence, we will be asking you to copy and paste text from one window to another. </P>
+                    <P>
+                        <ul>
+                            <li>A <B>pre-trial</B> will be conducted immediately after you press 'Next'. This is to familiarize you with the copy-paste techniques.</li>
+                            <li>Next, the real experiment will involve <B>27 trials</B> (copy-paste tasks) per technique. You will be given a <B>one minute break</B> every time you complete the trials for one technique. </li>
+                            <li>Since there are two techniques, there will be 54 trials for one experimental set. You will <B>repeat</B> the set 3 times in total.</li>
+                            <li>Lastly, you will be invited to fill in a <B>post-experiment questionnaire</B> and we will take any questions you have about the experiment.</li>
+                        </ul>
+                    </P>
 
+                    <h2> What you'll do </h2>
+                    <img src="img/diagram.PNG" class="acp-img">
+
+                    <h2> The techniques </h2>
+                    <div class="col-md-6">
+                        <h3>Traditional</h3>
+                        Use <span class="key">CTRL + C</span>, <span class="key">CTRL + V</span> to copy and paste highlighted text.
+                    </div>
+                    <div class="col-md-6">
+                        <h3>AutoComPaste</h3>
+                        Start by typing the text in the Text Editor window. A dropdown list will appear with possible suggestions. Use your arrow keys <span class="key">↑</span> <span class="key">↓</span> to select your desired text and press <span class="key">Enter</span>.
+                    </div>
+
+
+                    <div class="col-xs-12" style="margin-top: 50px; text-align: right;">
                     <form class="form-inline">
-                        <button type="submit" class="btn btn-primary btn-lg">Next</button>
+                        Ready? Press <button type="submit" class="btn btn-primary btn-lg">Next</button>
                     </form>
+                    </div>
                 </div>
             </div>
         </div>
