--- a/experiment.html
+++ b/experiment.html
@@ -46,8 +46,8 @@
                                 <td><span class="js-expt-granularity">Phrase</span></td>
                             </tr>
                             <tr>
-                                <td>Independent Variable 3</td>
-                                <td>???</td>
+                                <td>Open Windows</td>
+                                <td><span class="js-expt-windows">Phrase</span></td>
                             </tr>
                             <tr>
                                 <td>Trial</td>
