--- a/index.html
+++ b/index.html
@@ -30,11 +30,14 @@
             </div>
         </nav>
 
-        <div class="container">
+        <div class="container acp-container">
             <div class="row">
                 <div class="col-md-8 col-md-offset-2">
+                    <center><img style="margin-top: 100px;" src="img/c.png" class="circle-img"></center>
                     <h1>Welcome!</h1>
-                    <hr>
+                    
+                    <P>In this experiment, we are interested in finding out how AutoComPaste and Ctrl+C, Ctrl+V compare in terms of performance. Hence, we will be asking you to copy and paste text from one window to another. </P>
+
                     <p>Please enter your Participant ID and press 'Next'.</p>
                     <form class="form-inline" id="pid-form">
                         <div class="form-group">
