--- a/instructions.html
+++ b/instructions.html
@@ -33,21 +33,21 @@
         <div class="container acp-container">
             <div class="row">
                 <div class="col-md-8 col-md-offset-2">
+                    <center><img style="margin-top: 50px;" src="img/cc.png" class="circle-img"></center>
+
                     <h1>Instructions</h1>
-                    <hr>
+
                     <p>Dear participant <span class="js-pid pid"></span>,
                         thank you for participating!
                         Please read the instructions before the experiment.
 
-                    <h2> The experiment </h2>
-                    <P>In this experiment, we are interested in finding out how AutoComPaste and Ctrl+C, Ctrl+V compare in terms of performance. Hence, we will be asking you to copy and paste text from one window to another. </P>
-                    <P>
-                        <ul>
-                            <li>A <B>pre-trial</B> will be conducted immediately after you press 'Next'. This is to familiarize you with the copy-paste techniques.</li>
+                    <h2> Process </h2>
+                    <img src="img/steps.png" class="acp-img">
+                    <P> The steps for The Experiment are as follows:
+                        <ol><li>A <B>pre-trial</B> will be conducted immediately after you press 'Next'. This is to familiarize you with the copy-paste techniques.</li>
                             <li>Next, the real experiment will involve <B>27 trials</B> (copy-paste tasks) per technique. You will be given a <B>one minute break</B> every time you complete the trials for one technique. </li>
                             <li>Since there are two techniques, there will be 54 trials for one experimental set. You will <B>repeat</B> the set 3 times in total.</li>
-                            <li>Lastly, you will be invited to fill in a <B>post-experiment questionnaire</B> and we will take any questions you have about the experiment.</li>
-                        </ul>
+                        </ol>
                     </P>
 
                     <h2> What you'll do </h2>
