--- a/questionnaire-pre.html
+++ b/questionnaire-pre.html
@@ -30,67 +30,14 @@
             </div>
         </nav>
 
-        <div class="container">
-            <div class="row">
-                <div class="col-md-8 col-md-offset-2">
-                    <h1>Pre-Experiment Questionnaire</h1>
-                    <hr>
-                    <p>This part of the interface collects whatever pre-experiment information. Please come up with a basic questionnaire to help you to gather participant information. The purpose of this questionnaire is to report the participant data and convince readers that you have picked an appropriate target user group and the result has certain generalizability.</p>
-
-                    <p>Please put all information needed for participant: <span class="js-pid pid"></span></p>
-
-                    <form id="pre-expt-form">
-                        <div class="form-group">
-                            <label for="q1">Question 1 - Text</label>
-                            <input type="text" class="form-control" id="q1" name="q1" placeholder="Enter answer">
-                        </div>
-                        <div class="form-group">
-                            <label for="q2">Question 2 - Radio</label>
-                            <div class="radio">
-                              <label>
-                                <input type="radio" name="q2" id="optionsRadios1" value="radio1">
-                                Radio response 1
-                              </label>
-                            </div>
-                            <div class="radio">
-                              <label>
-                                <input type="radio" name="q2" id="optionsRadios2" value="radio2">
-                                Radio response 2
-                              </label>
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <label for="q3">Question 3 - Checkbox</label>
-                            <div class="checkbox">
-                              <label>
-                                <input type="checkbox" name="q3" value="checkbox1">
-                                Checkbox response 1
-                              </label>
-                            </div>
-                            <div class="checkbox">
-                              <label>
-                                <input type="checkbox" name="q3" value="checkbox2">
-                                Checkbox response 2
-                              </label>
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <label for="q4">Question 4 - Select Options</label>
-                            <select class="form-control" name="q4">
-                                <option value="option1">Option response 1</option>
-                                <option value="option2">Option response 2</option>
-                                <option value="option3">Option response 3</option>
-                                <option value="option4">Option response 4</option>
-                                <option value="option1">Option response 5</option>
-                            </select>
-                        </div>
-                        <div class="form-group">
-                            <label for="q5">Question 5 - Textarea</label>
-                            <textarea class="form-control" id="q5" name="q5" placeholder="Enter response"></textarea>
-                        </div>
-                        <button type="submit" class="btn btn-primary btn-lg">Submit</button>
-                    </form>
-                </div>
+        <div class="container survey-main">
+            <div class="row survey-main">
+                <iframe src="https://docs.google.com/forms/d/15BBJXHbwnTUbSbS1Z3BMFeSXikY3cgeBVJKwli98t_k/viewform?embedded=true" class="survey-container" id="q1" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
+            </div>
+            <div class="row" style="text-align: right; margin-top: 50px;">
+                <form class="form-inline">
+                    If you've completed the survey, press  <button href="instructions.html" class="btn btn-primary btn-lg">Next</button>
+            </form>
             </div>
         </div>
 
@@ -100,6 +47,8 @@
         <script src="js/ACPToolKit.js"></script>
         <script src="js/main.js"></script>
 
+        <!--
+        Using google forms hence this isnt needed
         <script>
             $(function () {
                 $('#pre-expt-form').submit(function (event) {
@@ -110,6 +59,6 @@
                     window.location = 'instructions.html';
                 });
             });
-        </script>
+        </script>-->
     </body>
 </html>
