--- a/instructions.html
+++ b/instructions.html
@@ -54,13 +54,13 @@
                     <img src="img/diagram.PNG" class="acp-img">
 
                     <h2> The techniques </h2>
-                    <div class="col-md-6">
+                    <div class="col-md-4">
                         <h3>Traditional</h3>
                         Use <span class="key">CTRL + C</span>, <span class="key">CTRL + V</span> to copy and paste highlighted text.
                     </div>
-                    <div class="col-md-6">
+                    <div class="col-md-8">
                         <h3>AutoComPaste</h3>
-                        Start by typing the text in the Text Editor window. A dropdown list will appear with possible suggestions. Use your arrow keys <span class="key">↑</span> <span class="key">↓</span> to select your desired text and press <span class="key">Enter</span>.
+                        Start by typing the text in the Text Editor window. A dropdown list will appear with possible suggestions.<P></P><b>Pasting text</b><br> Use arrow keys <span class="key">↑</span> <span class="key">↓</span> to select your desired text and press <span class="key">Enter</span>. <P><b>Pasting sentences</b><br>Use arrow key <span class="key">→</span> to paste the next sentence which comes after the current sentence.
                     </div>
 
 
