--- a/questionnaire-pre.html
+++ b/questionnaire-pre.html
@@ -35,9 +35,9 @@
                 <iframe src="https://docs.google.com/forms/d/15BBJXHbwnTUbSbS1Z3BMFeSXikY3cgeBVJKwli98t_k/viewform?embedded=true" class="survey-container" id="q1" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
             </div>
             <div class="row" style="text-align: right; margin-top: 50px;">
-                <form class="form-inline">
-                    If you've completed the survey, press  <button href="instructions.html" class="btn btn-primary btn-lg">Next</button>
-            </form>
+
+                    If you've completed the survey, press  <a href="instructions.html"><button  class="btn btn-primary btn-lg">Next</button></a>
+
             </div>
         </div>
 
