--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" href="css/style.css">
     <script src="js/vendor/modernizr-2.8.3.min.js"></script>
 </head>
@@ -32,12 +33,14 @@
 
 <div class="container acp-container">
     <div class="row">
-        <div class="col-md-8 col-md-offset-2">
+        <div class="col-md-8 col-md-offset-2 wow fadeInDown">
             <center><img style="margin-top: 100px;" src="img/c.png" class="circle-img"></center>
             <h1>Welcome!</h1>
 
             <P>In this experiment, we are interested in finding out how AutoComPaste and Ctrl+C, Ctrl+V compare in terms of performance. Hence, we will be asking you to copy and paste text from one window to another. </P>
 
+        </div>
+        <div class="col-md-8 col-md-offset-2 wow fadeInUp">
             <div class="acp-pidform">
                 <p>Please enter your Participant ID (<span class="acp-important">number from 1-6</span>) and press 'Submit'.</p>
 
@@ -54,12 +57,15 @@
 </div>
 
 <script src="js/vendor/jquery-1.11.2.min.js"></script>
+<script src="js/vendor/wow.min.js"></script>
 <script src="js/plugins.js"></script>
 <script src="js/DataStorage.js"></script>
 <script src="js/ACPToolKit.js"></script>
 <script src="js/main.js"></script>
 
 <script>
+    new WOW().init();
+
     $(function () {
         $('#pid-form').submit(function (event) {
             event.preventDefault();
